--- a/assets/css/admin/invoice.css
+++ b/assets/css/admin/invoice.css
@@ -18,26 +18,17 @@ body {
     color: white;
 }
 
-.logo {
+.logo img{
+    width: 200px;
     text-align: center;
     padding: 20px;
     border-bottom: 1px solid rgba(255,255,255,0.2);
     margin-bottom: 20px;
 }
 
-.logo h1 {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.logo p {
-    font-size: 12px;
-    opacity: 0.8;
-    margin-top: 5px;
-}
-
 .sidebar-menu {
     list-style: none;
+    
 }
 
 .sidebar-menu li {
@@ -47,6 +38,7 @@ body {
     display: flex;
     align-items: center;
     gap: 15px;
+    
 }
 
 .sidebar-menu li:hover {
@@ -58,13 +50,13 @@ body {
     border-right: 3px solid white;
 }
 
-.icon {
+.icon img{
     width: 20px;
     height: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 16px;
+    
 }
 
 .main-content {
