--- a/assets/css/user/login.css
+++ b/assets/css/user/login.css
@@ -185,19 +185,21 @@ body {
 }
 
 .remember-forgot label input {
+    
     accent-color: #3730c4;
     margin-right: 3px;
 }
 
 .remember-forgot a {
+    margin-top: 6px;
+    margin-bottom: 6px;
     color: #3730c4;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .wrapper .btn {
     width: 100%;
     height: 45px;
-    margin: 10px;
     background-color: #ffffffed;
     border: none;
     border-radius: 48px;
@@ -206,19 +208,15 @@ body {
     font-size: 16px;
     color: #333;
     font-weight: 600;
+    margin-top: 6px;
+    margin-bottom: 6px;
 }
-.regwrapper h1{
-    margin-bottom: 10px;
-}
-.regwrapper .btn:hover {
+.wrapper .btn:hover {
     background-color: #d8d8d8;
-    transform: translateY(-2px);
+    transform: translateY(-4px);
 }
-.regwrapper .register-link {
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
-}
+
+
 
 .register-link p a {
     color: #3730c4;
@@ -261,10 +259,19 @@ body {
     overflow: hidden;
 }
 
-
+.regwrapper .btn:hover {
+    background-color: #d8d8d8;
+    transform: translateY(-4px);
+}
+.regwrapper .register-link {
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
 .regwrapper h1 {
     font-size: 36px;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 
