--- a/assets/css/user/about.css
+++ b/assets/css/user/about.css
@@ -14,76 +14,14 @@ body {
 }
 
 /* Global Containers */
-.container, .Landing-page,
+.landing-container, .Landing-page,
 .Gallery-Page, .About-Info, .reserve-container{
     width: 100%;
     max-width: 100%;
     overflow-x: hidden; 
 }
 
-/* --- Navbar Section --- */
-.navbar {
-    display: flex;
-    position: fixed;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #F6F6F6;
-    padding: 20px 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    top: 0;
-    width: 100%; 
-    z-index: 900;
-    
-}
 
-.navbar img {
-    padding: 2px 3px;
-    width: 70px;
-    height: auto;
-}
-
-.navbar ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    list-style-type: none;
-}
-
-.navbar a {
-    color: #838181;
-    text-decoration: none;
-    padding: 20px;
-    position: relative;
-    align-items: center;
-}
-
-.navbar a:hover {
-    background-color: rgba(0, 0, 0, 0.781);
-    color: white;
-    border-radius: 6%;
-}
-
-.navbar a:active {
-    color: #5121fecd;
-    font-weight: 300;
-}
-
-@media screen and (max-width: 490px) {
-    .navbar {
-        flex-direction: row;
-        text-align: center;
-    }
-    .navbar ul {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .navbar a {
-        font-size: 15px;
-
-        margin: 15px;
-        padding: 15px;
-    }
-}
 /* About Section */
 .About-Info {
     padding: 3% 5%;
