--- a/assets/css/user/booking.css
+++ b/assets/css/user/booking.css
@@ -13,73 +13,6 @@ body {
   background-color: #f4f4f4;
 }
 
-/* Global Containers */
-
-/* --- Navbar Section --- */
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #F6F6F6;
-    padding: 20px 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.navbar img {
-    padding: 2px 3px;
-    width: 70px;
-    height: auto;
-}
-
-.navbar ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    list-style-type: none;
-}
-
-.navbar a {
-    color: #838181;
-    text-decoration: none;
-    padding: 20px;
-    position: relative;
-    align-items: center;
-}
-
-/* .navbar  img{
-    width: 100px;
-    background-color: red;
-} */
-
-.navbar a:hover {
-    background-color: rgba(0, 0, 0, 0.781);
-    color: white;
-    border-radius: 6%;
-}
-
-.navbar a:active {
-    color: #5121fecd;
-    font-weight: 300;
-}
-
-
-@media screen and (max-width: 490px) {
-    .navbar {
-        flex-direction: row;
-        text-align: center;
-    }
-    .navbar ul {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .navbar a {
-        font-size: 15px;
-
-        margin: 15px;
-        padding: 15px;
-    }
-}
-
 
 .page-title {
     text-align: center;
@@ -91,6 +24,10 @@ body {
 .main-container {
     max-width: 95%;
     margin: 20px auto;
+}
+.booking-container {
+    max-width: 100%;
+    margin-top: 10%;
 }
 
 .form-container {
