--- a/assets/css/user/booking.css
+++ b/assets/css/user/booking.css
@@ -29,10 +29,22 @@ body {
 .main-container {
     flex-grow: 1;
     width: 100%;
-    max-width: 1200px;
+    max-width: 90%;
     margin: 20px auto;
 }
+/* This hides the entire packages field and label */
+.hidden {
+    display: none;
+}
 
+/* This hides all package options by default */
+/* .package-group option {
+    display: none;
+} */
+/* Add this rule to your existing CSS file */
+#packages optgroup option {
+    display: none;
+}
 .form-container {
     background-color: #fff;
     padding: 40px;
